--- a/_resources/scss/base/_reset.scss
+++ b/_resources/scss/base/_reset.scss
@@ -10,8 +10,8 @@ img{
 }
 
 h2{
-	font-weight: $font-lighter;
-	font-size: $medium;
+	font-weight: $font-bolder;
+	font-size: $x-small;
 	text-transform: uppercase;
 	color: $white;
 	font-style: italic;
