--- a/_resources/scss/base/_reset.scss
+++ b/_resources/scss/base/_reset.scss
@@ -11,7 +11,7 @@ img{
 
 h2{
 	font-weight: $font-bolder;
-	font-size: $x-small;
+	font-size: $large;
 	text-transform: uppercase;
 	color: $white;
 	font-style: italic;
@@ -41,8 +41,10 @@ h5{
 	text-transform: uppercase;
 	color: $white;
 	font-style: italic;
+	text-align: center;
 }
 
 li{
 	list-style: none;
 }
+
