--- a/_resources/scss/layout/_main_container.scss
+++ b/_resources/scss/layout/_main_container.scss
@@ -18,6 +18,11 @@
 		box-sizing:border-box;
 	}
 
+	&__thumb{
+		object-fit: cover;
+		max-width: 100%;
+	}
+
 	&__frame{
 	  	&--smallsquare{
 		grid-column: span 2;
@@ -54,19 +59,20 @@
 	}
 
 	&__thumb{
-
+		object-fit: cover;
+		max-width: 100%;
+		max-height: 100%;
 	}
 	
 	&__caption{
 		background-color: #5A25B7;
 		padding-top: 1em;
 		padding-bottom: 1em;
-		padding-right: 1em;
 	    text-align: right;
+	    width: 100%;
 	    top: 77%;
 	    right: 0;
 	    position: absolute;
-	    width: 100%;
 	    height: 15%;
 	    cursor: pointer;
 	    transition: transform 0.1s linear;
@@ -79,6 +85,8 @@
 		color: $white;
 		text-decoration: none;
 		display: block;
+		padding-right: 1em;
+
 	}
 
 	&__captiontitle{
@@ -87,6 +95,8 @@
 		text-transform: uppercase;
 		color: $white;
 		font-style: italic;
+		padding-right: 1em;
+
 	}
 
 	&__link:hover {
